--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.75"
 clap = { version = "4.1.6", features = ["derive"] }
+itertools = "0.11.0"
 rand = { version = "0.8.5", features = ["std"] }
